manifests/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "sample-validating-webhook"
webhooks:
- name: "mywebhook.mynamespace.svc.cluster.local"
  failurePolicy: Fail
  rules:
  - apiGroups: [""]
    operations: ["CREATE"]
    apiVersions: ["v1"]
    resources: ["pods"]
    scope: "Namespaced"
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjRENDQWxpZ0F3SUJBZ0lKQU1jeEtVSVcvM1F5TUEwR0NTcUdTSWIzRFFFQkJRVUFNRTR4Q3pBSkJnTlYKQkFZVEFrcFFNUTR3REFZRFZRUUlEQVZVYjJ0NWJ6RXZNQzBHQTFVRUF3d21iWGwzWldKdmIyc3ViWGx1WVcxbApjM0JoWTJVdWMzWmpMbU5zZFhOMFpYSXViRzlqWVd3d0hoY05Nakl3TlRFM01ESTFNakl4V2hjTk1qTXdOVEUzCk1ESTFNakl4V2pCT01Rc3dDUVlEVlFRR0V3SktVREVPTUF3R0ExVUVDQXdGVkc5cmVXOHhMekF0QmdOVkJBTU0KSm0xNWQyVmliMjlyTG0xNWJtRnRaWE53WVdObExuTjJZeTVqYkhWemRHVnlMbXh2WTJGc01JSUJJakFOQmdrcQpoa2lHOXcwQkFRRU [...]
    service:
      namespace: mynamespace
      name: mywebhook
      path: /runasuser-validation
  admissionReviewVersions: ["v1"]
  timeoutSeconds: 5
  sideEffects: None
